// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers/mapAction should map action 1`] = `
Object {
  "action": "ACTION MAPPED !",
  "state": 1,
}
`;

exports[`helpers/mapPayload should map payload (type matcher OK) 1`] = `
Object {
  "action": Object {
    "payload": "PAYLOAD MAPPED !",
    "type": "TYPE",
  },
  "state": 1,
}
`;

exports[`helpers/mapPayload should map payload retrieve current state 1`] = `
Object {
  "action": Object {
    "payload": 2,
    "type": "TYPE",
  },
  "state": 1,
}
`;

exports[`helpers/mapPayload should map payload without matching type 1`] = `
Object {
  "action": Object {
    "payload": "PAYLOAD MAPPED !",
    "type": "TYPE",
  },
  "state": 1,
}
`;

exports[`helpers/mapPayload should not map payload (type matcher is KO) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": 1,
}
`;

exports[`helpers/mapState should map state (type matcher OK) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": "1 MAPPED !",
}
`;

exports[`helpers/mapState should map state (type matcher is KO) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": 1,
}
`;

exports[`helpers/mapState should map state without matching type 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": "1 MAPPED !",
}
`;
